symmetrical-broccoli-routetable-us-west-2
{
    "RouteTable": {
        "Associations": [], 
        "RouteTableId": "rtb-53a3c335", 
        "VpcId": "vpc-013cdf67", 
        "PropagatingVgws": [], 
        "Tags": [], 
        "Routes": [
            {
                "GatewayId": "local", 
                "DestinationCidrBlock": "10.10.10.0/24", 
                "State": "active", 
                "Origin": "CreateRouteTable"
            }
        ]
    }
}
